--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.21.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.13",
     "scss": "^0.2.4",
