package: 패스워드 해싱을 위해 argon2 module 추가

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.2",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
