config: 기본 API주소를 .env에서 바꿀 수 있도록 수정

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "dotenv": "^8.2.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -39,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
